<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PublishArticleFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSizeForm"
            android:textColor="@color/colorDark"
            android:text="@string/title" />
        <EditText
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSizeForm"
            android:textColor="@color/colorDark"
            android:text="@string/subtitle" />
        <EditText
            android:id="@+id/subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSizeForm"
            android:textColor="@color/colorDark"
            android:text="@string/category" />
        <Spinner
            android:id="@+id/category_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spinnerHeight"
            android:layout_marginBottom="@dimen/spinnerHeight"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSizeForm"
            android:textColor="@color/colorDark"
            android:text="@string/abstrac" />
        <EditText
            android:id="@+id/abstrac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="4"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSizeForm"
            android:textColor="@color/colorDark"
            android:text="@string/body" />
        <EditText
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="6"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSizeForm"
            android:textColor="@color/colorDark"
            android:text="@string/image" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/ic_news_foreground"
            tools:ignore="VectorDrawableCompat"
            android:layout_marginTop="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textSizeForm"
            android:textColor="@color/colorDark"
            android:text="@string/description" />
        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/publish_new_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/add_new"
            android:textColor="@color/colorLight"
            android:layout_marginTop="@dimen/marginTopBtn" />

    </LinearLayout>
    </ScrollView>
</FrameLayout>